Vitrin sag yazarlar

--- a/HaberPortal.Web/HaberPortal.Web.csproj
+++ b/HaberPortal.Web/HaberPortal.Web.csproj
@@ -875,6 +875,7 @@
     <Content Include="Views\Home\VitrinOrta.cshtml" />
     <Content Include="Views\Home\VitrinSag.cshtml" />
     <Content Include="Views\Home\HaberDetay.cshtml" />
+    <Content Include="Views\Home\KoseYazisiDetay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
