Anasayfa kategori haberleri

--- a/HaberPortal.Web/HaberPortal.Web.csproj
+++ b/HaberPortal.Web/HaberPortal.Web.csproj
@@ -876,6 +876,7 @@
     <Content Include="Views\Home\VitrinSag.cshtml" />
     <Content Include="Views\Home\HaberDetay.cshtml" />
     <Content Include="Views\Home\KoseYazisiDetay.cshtml" />
+    <Content Include="Views\Home\KategoriHaberler.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
