--- a/HaberPortal.Web/HaberPortal.Web.csproj
+++ b/HaberPortal.Web/HaberPortal.Web.csproj
@@ -53,7 +53,7 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.5.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.5.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -63,6 +63,9 @@
       <HintPath>..\packages\System.Linq.Dynamic.1.0.0\lib\net40\System.Linq.Dynamic.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.4.0.30506.0\lib\net40\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -78,9 +81,6 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.4.0.20710.0\lib\net40\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest">
       <Private>True</Private>
@@ -146,6 +146,7 @@
     <Compile Include="Areas\Admin\ViewModels\HaberViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModels\KullaniciViewModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KategoriController.cs" />
     <Compile Include="Controllers\UyelikController.cs" />
     <Compile Include="CustomAttributes\ValidateFileAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -371,7 +372,6 @@
     <Content Include="Areas\Admin\Views\Yorum\Yorumlar.cshtml" />
     <Content Include="Areas\Admin\Views\Kullanici\KullaniciDuzenle.cshtml" />
     <Content Include="Areas\Admin\Views\Kullanici\KullaniciEkle.cshtml" />
-    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Areas\Admin\Scripts\Admin\Admin.js" />
     <Content Include="Content\JqueryEasyUi.1.3.2\changelog.txt" />
     <Content Include="Content\JqueryEasyUi.1.3.2\demo\accordion\actions.html" />
@@ -840,14 +840,15 @@
     <Content Include="Content\JqueryEasyUi.1.3.2\themes\metro\validatebox.css" />
     <Content Include="Content\JqueryEasyUi.1.3.2\themes\metro\window.css" />
     <Content Include="Scripts\AnaSayfa.js" />
-    <Content Include="Scripts\jquery-1.9.1.js" />
-    <Content Include="Scripts\jquery-1.9.1.min.js" />
-    <Content Include="Scripts\jquery-1.9.1.min.map" />
+    <None Include="Scripts\jquery-2.0.0.intellisense.js" />
+    <Content Include="Scripts\jquery-2.0.0.js" />
+    <Content Include="Scripts\jquery-2.0.0.min.js" />
     <Content Include="Scripts\jquery-ui-1.10.2.js" />
     <Content Include="Scripts\jquery-ui-1.10.2.min.js" />
+    <Content Include="Scripts\jquery-2.0.0.min.map" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -878,6 +879,8 @@
     <Content Include="Views\Home\KoseYazisiDetay.cshtml" />
     <Content Include="Views\Home\KategoriHaberler.cshtml" />
     <Content Include="Views\Home\EnCokOkunanHaberler.cshtml" />
+    <Content Include="Views\Home\AnaMenu.cshtml" />
+    <Content Include="Views\Kategori\KategoriDetay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
